force-app/main/default/objects/Site_Manager__c/Site_Manager__c.object-meta.xml
<CustomObject>
    <label>Site Manager</label>
    <nameField>
        <displayFormat>MG-{000}</displayFormat>
        <label>Site Manager Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Site Managers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>