force-app/main/default/objects/Site_Manager__c/fields/Agrees_with_the_dangers_of_the_project__c.field-meta.xml
<CustomField>
    <fullName>Agrees_with_the_dangers_of_the_project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Agrees with the dangers of the project</label>
    <type>Checkbox</type>
</CustomField>