force-app/main/default/objects/Site_Manager__c/fields/The_Project_will_Last_years__c.field-meta.xml
<CustomField>
    <fullName>The_Project_will_Last_years__c</fullName>
    <label>The Project will Last(years)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>